--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
-numpy
-oauth2client
-gspread
-seaborn
-matplotlib
+streamlit==1.31.1
+pandas==1.5.3
+numpy==1.26.3
+oauth2client==4.1.3
+gspread==5.12.4
+seaborn==0.12.2
+matplotlib==3.8.3
+scikit-learn==1.4.1
 datetime
